--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "radium-normalize": "^2.0.4",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-fastclick": "^2.1.2",
     "react-helmet": "^3.1.0",
     "react-router": "^2.6.1"
   },
