--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-dom": "^15.3.0",
     "react-fastclick": "^2.1.2",
     "react-helmet": "^3.1.0",
-    "react-router": "^2.6.1"
+    "react-router": "^2.6.1",
+    "react-router-scroll": "^0.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
