Add Eslint rule to allow jsx in .js files.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "never"
       ],
       "new-cap": 0,
-      "global-require": 0
+      "global-require": 0,
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
   },
   "engines": {
