Disable react/require-extension rule.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,16 @@
       ],
       "new-cap": 0,
       "global-require": 0,
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+      "react/require-extension": 0,
+      "react/jsx-filename-extension": [
+        1,
+        {
+          "extensions": [
+            ".js",
+            ".jsx"
+          ]
+        }
+      ]
     }
   },
   "engines": {
