--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-static-plate",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Build static sites with React to host on Amazon S3, Github Pages, Surge et cetera",
   "license": "MIT",
   "private": true,
@@ -11,6 +11,9 @@
     "build:bundle": "cross-env NODE_ENV=production webpack --config ./tools/webpack.prod.config.js",
     "build:static": "cross-env NODE_ENV=production babel-node ./tools/build_static_entry.js",
     "build": "npm run clean && npm run build:bundle && npm run build:static"
+  },
+  "plate_config": {
+    "website": "http://example.com"
   },
   "babel": {
     "presets": [
@@ -28,48 +31,71 @@
         "never"
       ],
       "new-cap": 0,
-      "global-require": 0
+      "global-require": 0,
+      "react/require-extension": 0,
+      "react/jsx-filename-extension": [
+        1,
+        {
+          "extensions": [
+            ".js",
+            ".jsx"
+          ]
+        }
+      ]
     }
   },
   "engines": {
     "node": ">=4.4"
   },
   "dependencies": {
-    "radium": "^0.17.1",
-    "radium-normalize": "^2.0.3",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "normalize.css": "^4.2.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-fastclick": "^2.1.2",
     "react-helmet": "^3.1.0",
-    "react-router": "^2.4.1",
-    "rebass": "^0.2.7"
+    "react-router": "^2.6.1",
+    "react-router-scroll": "^0.3.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "autoprefixer": "^6.4.0",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "cross-env": "^1.0.8",
-    "eslint": "^2.11.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.3.0",
-    "eslint-plugin-react": "^5.1.1",
-    "express": "^4.13.4",
-    "file-loader": "^0.8.5",
+    "cross-env": "^2.0.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.2",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "image-webpack-loader": "^2.0.0",
     "json-loader": "^0.5.4",
-    "lodash": "^4.13.1",
+    "lodash": "^4.15.0",
     "mkdirp": "^0.5.1",
-    "redbox-react": "^1.2.6",
-    "rimraf": "^2.5.2",
-    "sitemap": "^1.6.0",
+    "postcss-functions": "^2.1.0",
+    "postcss-import": "^8.1.2",
+    "postcss-loader": "^0.10.1",
+    "precss": "^1.4.0",
+    "redbox-react": "^1.3.0",
+    "rimraf": "^2.5.4",
+    "rucksack-css": "^0.8.6",
+    "sitemap": "^1.8.1",
+    "style-loader": "^0.13.1",
+    "stylelint": "^7.1.0",
+    "stylelint-config-standard": "^12.0.0",
+    "to-rem": "^0.1.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0",
-    "webpack-isomorphic-tools": "^2.3.0"
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-isomorphic-tools": "^2.5.7"
   },
   "author": "Yannik Schweinzer",
   "repository": {
