--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node": ">=4.4"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "normalize.css": "^4.2.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
