--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "classnames": "^2.2.5",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.3.1",
