--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-static-plate",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Build fast static sites with React & CSS Modules.",
   "license": "MIT",
   "private": true,
@@ -57,54 +57,55 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "normalize.css": "^4.2.0",
+    "history": "^3.2.0",
+    "normalize.css": "^5.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-fastclick": "^2.1.2",
-    "react-helmet": "^3.1.0",
-    "react-router": "^2.8.1",
-    "react-router-scroll": "^0.3.2"
+    "react-helmet": "^3.2.2",
+    "react-router": "^3.0.0",
+    "react-router-scroll": "^0.4.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.0",
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
+    "autoprefixer": "^6.5.2",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
-    "cross-env": "^3.0.0",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
-    "eslint": "^3.7.0",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.6.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "image-webpack-loader": "^2.0.0",
+    "image-webpack-loader": "^3.0.0",
     "json-loader": "^0.5.4",
-    "lodash": "^4.16.2",
+    "lodash": "^4.16.6",
     "mkdirp": "^0.5.1",
-    "postcss-functions": "^2.1.0",
-    "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.13.0",
+    "postcss-functions": "^2.1.1",
+    "postcss-import": "^8.2.0",
+    "postcss-loader": "^1.1.0",
     "precss": "^1.4.0",
-    "redbox-react": "^1.3.1",
+    "redbox-react": "^1.3.3",
     "rimraf": "^2.5.4",
     "rucksack-css": "^0.8.6",
     "sitemap": "^1.8.2",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.3.1",
-    "stylelint-config-standard": "^13.0.2",
+    "stylelint": "^7.5.0",
+    "stylelint-config-standard": "^14.0.0",
     "to-rem": "^0.1.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-isomorphic-tools": "^2.5.8"
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.2",
+    "webpack-isomorphic-tools": "^2.6.4"
   },
   "author": "Yannik Schweinzer",
   "repository": {
